# esp32-driver-nextion

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  component.mk  library.json  project.ps1  sdkconfig  sdkconfig.defaults  sonar-project.properties
.debug/: cjmcu-ftdi-2232HL.cfg
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: build-with-sonar.sh
.github/workflows/: build.yml  development.yml  (+1 more)
.pipeline/: README.md  azure-devops.yml
components/nextion/: CMakeLists.txt  Kconfig  library.json  nextion.c  nextion_buffer.c  nextion_parse.c  rgb565.c  ringbuffer.c
components/nextion/include/: nextion.h  nextion_codes.h  nextion_constants.h  nextion_types.h
components/nextion/include/nextion/: codes.h  component.h  constants.h  drawing.h  eeprom.h  nextion-esp32.h  nextion.h  op_component.h  op_drawing.h  op_page.h  op_screen.h  op_system.h  op_waveform.h  page.h  system.h  types.h  waveform.h
components/nextion/include/nextion/base/: codes.h  constants.h  events.h  types.h
components/nextion/include/rgb565/: rgb565.h
components/nextion/private_include/: common.h  common_infra.h  config.h  nextion_buffer.h  nextion_common.h  nextion_config.h  nextion_parse.h  ringbuffer.h
components/nextion/private_include/nextion/: config.h  parse.h
components/nextion/private_include/ringbuffer/: ringbuffer.h
components/nextion/src/: nextion-esp32.c
components/nextion/src/nextion/: component.c  drawing.c  eeprom.c  nextion.c  op_component.c  op_drawing.c  op_page.c  op_screen.c  op_system.c  op_waveform.c  page.c  parse.c  system.c  waveform.c
components/nextion/src/rgb565/: rgb565.c
components/nextion/src/ringbuffer/: ringbuffer.c
components/nextion/test/: CMakeLists.txt  common_infra_test.h  nextion_buffer_test.c  nextion_parse_test.c  nextion_test.c  rgb565_test.c  ringbuffer_test.c  test.c
components/nextion/test/nextion/: component_test.c  drawing_test.c  eeprom_test.c  nextion_test.c  op_component_test.c  op_drawing.c  op_drawing_test.c  op_page_test.c  op_screen_test.c  op_system_test.c  op_waveform_test.c  page_test.c  parse_test.c  system_test.c  test.c  waveform_test.c
components/nextion/test/nextion/hmi/: arial.zi  test_display.HMI
components/nextion/test/nextion/infra/: common_infra_test.h
components/nextion/test/rgb565/: test.c
components/nextion/test/ringbuffer/: argument_test.c  operation_test.c
docs/: CODEOWNERS  CONTRIBUTING.md
driver/: nextion.c
examples/: listen_button_released.c
main/: CMakeLists.txt  main.c
test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
(+88 files in other folders)
